--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="line"></div>
     <section class="tiles">
         <div class="guess" id="guess1" data-letters="">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="tile" id="tile1"></div>
+            <div class="tile" id="tile2"></div>
+            <div class="tile" id="tile3"></div>
+            <div class="tile" id="tile4"></div>
+            <div class="tile" id="tile5"></div>
         </div>
         <div class="guess" id="guess2" data-letters="">
             <div class="tile"></div>
