--- a/index.html
+++ b/index.html
@@ -15,46 +15,46 @@
     <div class="line"></div>
     <section class="tiles">
         <div class="guess" id="guess1" data-letters="">
-            <div class="tile" id="tile1"></div>
-            <div class="tile" id="tile2"></div>
-            <div class="tile" id="tile3"></div>
-            <div class="tile" id="tile4"></div>
-            <div class="tile" id="tile5"></div>
+            <div class="tile" id="guess1tile1"></div>
+            <div class="tile" id="guess1tile2"></div>
+            <div class="tile" id="guess1tile3"></div>
+            <div class="tile" id="guess1tile4"></div>
+            <div class="tile" id="guess1tile5"></div>
         </div>
         <div class="guess" id="guess2" data-letters="">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="tile" id="guess2tile1"></div>
+            <div class="tile" id="guess2tile2"></div>
+            <div class="tile" id="guess2tile3"></div>
+            <div class="tile" id="guess2tile4"></div>
+            <div class="tile" id="guess2tile5"></div>
         </div>
         <div class="guess" id="guess3" data-letters="">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="tile" id="guess3tile1"></div>
+            <div class="tile" id="guess3tile2"></div>
+            <div class="tile" id="guess3tile3"></div>
+            <div class="tile" id="guess3tile4"></div>
+            <div class="tile" id="guess3tile5"></div>
         </div>
         <div class="guess" id="guess4" data-letters="">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="tile" id="guess4tile1"></div>
+            <div class="tile" id="guess4tile2"></div>
+            <div class="tile" id="guess4tile3"></div>
+            <div class="tile" id="guess4tile4"></div>
+            <div class="tile" id="guess4tile5"></div>
         </div>
         <div class="guess" id="guess5" data-letters="">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="tile" id="guess5tile1"></div>
+            <div class="tile" id="guess5tile2"></div>
+            <div class="tile" id="guess5tile3"></div>
+            <div class="tile" id="guess5tile4"></div>
+            <div class="tile" id="guess5tile5"></div>
         </div>
         <div class="guess" id="guess6" data-letters="">
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
-            <div class="tile"></div>
+            <div class="tile" id="guess6tile1"></div>
+            <div class="tile" id="guess6tile2"></div>
+            <div class="tile" id="guess6tile3"></div>
+            <div class="tile" id="guess6tile4"></div>
+            <div class="tile" id="guess6tile5"></div>
         </div>
     </section>
 </body>
