copyright added hehe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="nav">
-        <div class="word">WORDLE</div>
+        <div class="word">WORDLE </div>
     </section>
     <div class="line"></div>
     <section class="tiles">
@@ -57,5 +57,6 @@
             <div class="tile" id="guess6tile5"></div>
         </div>
     </section>
+    <div class="tags"> &copy;SahilGaikwad2049</div>
 </body>
 </html>
