--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="key" data-key="U">U</div>
             <div class="key" data-key="I">I</div>
             <div class="key" data-key="O">O</div>
-            <div class="key" data-key="U">P</div>
+            <div class="key" data-key="P">P</div>
         </div>
         <!-- <div class="key" data-key=""></div> -->
         <div class="mid">
