updated virtual keyboard

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <div class="key" data-key="L">L</div>
         </div>
         <div class="lower">
+            <div class="key enter" data-key="Enter">ENTER</div>
             <div class="key" data-key="Z">Z</div>
             <div class="key" data-key="X">X</div>
             <div class="key" data-key="C">C</div>
@@ -93,6 +94,7 @@
             <div class="key" data-key="B">B</div>
             <div class="key" data-key="N">N</div>
             <div class="key" data-key="M">M</div>
+            <div class="key del" data-key="Backspace">DEL</div>
         </div>
     </section>
     <div class="tags"> &copy;SahilGaikwad2049</div>
