win-tile animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <section class="nav">
         <div class="word">WORDLE</div>
     </section>
-    <div class="line"></div>
+    <div class="prime">
+        <div class="line"></div>
+        <div class="remark"></div>
+    </div>
     <section class="tiles">
         <div class="guess" id="guess1" data-letters="">
             <div class="tile" id="guess1tile1"></div>
@@ -73,7 +76,6 @@
             <div class="key" data-key="O">O</div>
             <div class="key" data-key="P">P</div>
         </div>
-        <!-- <div class="key" data-key=""></div> -->
         <div class="mid">
             <div class="key" data-key="A">A</div>
             <div class="key" data-key="S">S</div>
